Fix list alignment

--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -62,5 +62,8 @@ $font-button: 400 1rem/1.3 $typeface-outfit
     b
         font-weight: bold
 
+    ul, ol
+        text-align: left
+
     ::selection
         background: #175e84
